--- a/css/bondi.css
+++ b/css/bondi.css
@@ -72,7 +72,7 @@ body .scroll span {
     right: -45px;
     background-color: var(--two-color);
     padding: 10px;
-    border-radius: 4px;
+    border-radius: 50%;
     color: white;
     font-size: 14px;
     cursor: pointer;
